--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="section section-desktop-vertical-type">
+      <section class="section section--featured">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <ul class="section__content">
           <li>
@@ -153,7 +153,7 @@
           </li>
         </ul>
       </section>
-      <section class="section section-desktop-vertical-type">
+      <section class="section section--featured">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
