--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </li>
         </ul>
       </section>
-      <section class="section section-desktop-horizontal-type">
+      <section class="section section--featured">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <ul class="section__content">
           <li>
